--- a/RogueOne/Views/Home/Index.cshtml
+++ b/RogueOne/Views/Home/Index.cshtml
@@ -1,41 +1,45 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"]</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">User Information</h5>
-                <div id="userInfo">
-                    
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-body">
+            <form>
+                <div class="row">
+                    <h5 class="card-title">Enter Instagram username:</h5>
+                    <div class="col-10">
+                        <input class="form-control" id="username" />
+                    </div>
+                    <div class="col-2">
+                        <button class="btn btn-primary" onclick="indexScript.getPopulateUserInfo()" type="button">Go</button>
+                    </div>
                 </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">User Information</h5>
+            <div id="userInfo">
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="~/js/IndexScript.js"></script>
+<div class="container mt-5" id="captionsBox" style="display:none">
+    <div class="card">
+        <div class="card-body">
+            <div class="row" id="captionsRow">
+                
+            </div>
+        </div>
+    </div>
+</div>
 
-    <script>
-        $(document).ready(async function () {
-            const user = await indexScript.getUserId();
-
-            $('#userInfo').html(`
-                <p><strong>Username:</strong> ${user.username}</p>
-                <p><strong>User ID:</strong> ${user.userId}</p>
-                <p><strong>Attempts:</strong> ${user.attempts}</p>
-            `);
-        });
-    </script>
-</body>
-</html>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="~/js/IndexScript.js"></script>
