added sweet alert

--- a/RogueOne/Views/Home/Index.cshtml
+++ b/RogueOne/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="container mt-5">
+<div class="container mt-5" id="userInfoBox" style="display:none">
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">User Information</h5>
